[HQ-1406] (Charles) Fixed the radio button spacing

--- a/web/css/HQ_40.css
+++ b/web/css/HQ_40.css
@@ -409,7 +409,7 @@ a:visited,a:hover,a {
     width: 75px;
     text-align: right;
     font-weight: 700;
-    padding: 4px 5px 0 0
+    padding: 2px 5px 0 0
 }
 
 .fieldRow span.help {
